feat: update to gemini-2.0-flash-lite model and fix env.example

--- a/env.example
+++ b/env.example
@@ -26,9 +26,9 @@ OCRSPACE_API_KEY=your_ocr_space_api_key_here
 # GEMINI MODEL CONFIGURATION
 # =============================================================================
 
-# Gemini model to use (default: gemini-2.0-flash-light)
-# Available models: gemini-2.0-flash-light, gemini-2.0-flash, gemini-1.5-flash
-GEMINI_MODEL=gemini-2.0-flash-light
+# Gemini model to use (default: gemini-2.0-flash-lite)
+# Available models: gemini-2.0-flash-lite, gemini-2.0-flash, gemini-1.5-flash
+GEMINI_MODEL=gemini-2.0-flash-lite
 
 # =============================================================================
 # SERVER CONFIGURATION
