--- a/env.example
+++ b/env.example
@@ -1,26 +1,12 @@
 # ShopAssist v2.3.6 - Environment Configuration
 
 # =============================================================================
-# EXTRACTION BACKEND CONFIGURATION
-# =============================================================================
-
-# Choose your extraction backend:
-# - 'ocr': Use only OCR-Space API (default)
-# - 'gemini': Use only Google Gemini API
-# - 'gemini_fallback': Use Gemini API with OCR-Space fallback
-PRICETAG_EXTRACTION_BACKEND=gemini_fallback
-
-# =============================================================================
 # API KEYS
 # =============================================================================
 
-# Google Gemini API Key (required for 'gemini' or 'gemini_fallback')
+# Google Gemini API Key (required)
 # Get your key from: https://makersuite.google.com/app/apikey
 GEMINI_API_KEY=your_gemini_api_key_here
-
-# OCR-Space API Key (required for 'ocr' or 'gemini_fallback')
-# Get your key from: https://ocr.space/ocrapi
-OCRSPACE_API_KEY=your_ocr_space_api_key_here
 
 # =============================================================================
 # GEMINI MODEL CONFIGURATION
@@ -38,21 +24,4 @@ GEMINI_MODEL=gemini-2.0-flash-lite
 PORT=3000
 
 # Environment (development/production)
-NODE_ENV=production
-
-# =============================================================================
-# EXAMPLE CONFIGURATIONS
-# =============================================================================
-
-# Example 1: OCR-Space only (free tier, limited requests)
-PRICETAG_EXTRACTION_BACKEND=ocr
-OCRSPACE_API_KEY=your_ocr_space_api_key_here
-
-# Example 2: Gemini only (paid, better accuracy)
-# PRICETAG_EXTRACTION_BACKEND=gemini
-# GEMINI_API_KEY=your_gemini_api_key_here
-
-# Example 3: Gemini with OCR fallback (recommended for production)
-# PRICETAG_EXTRACTION_BACKEND=gemini_fallback
-# GEMINI_API_KEY=your_gemini_api_key_here
-# OCRSPACE_API_KEY=your_ocr_space_api_key_here 
+NODE_ENV=production 
